k8s/base/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: bookstore
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      tier: database
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      volumes:
      - name: mysql-initdb
        configMap:
          name: mysql-init-script  # ← matches configMapGenerator name
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: mysql
          image: mysql:8.0.36
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3306
              name: mysql

          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true   

  

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -u root -p$MYSQL_ROOT_PASSWORD
            initialDelaySeconds: 30
            periodSeconds: 20

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -u root -p$MYSQL_ROOT_PASSWORD
            initialDelaySeconds: 10
            periodSeconds: 10

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL

  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
