k8s/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bookstore
  labels:
    app: mysql
    tier: database
spec:
  ports:
    - port: 3306
      name: mysql
  clusterIP: None
  selector:
    app: mysql
    tier: database
