k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bookstore
  labels:
    app: redis
    tier: cache
spec:
  selector:
    app: redis
    tier: cache
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
